Forgotten commit: Added basic CentOS7 support

--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -5,6 +5,22 @@
     - 'ansible_version.major is number'
     - 'ansible_version.major >= 2'
 
-- name: Add yum repository
-  fail:
-    mesg: "This should be prepared later"
+- name: Set-up yum-repository (when needed)
+  include: yum-repository.yml
+  when: docker_add_repository
+
+- name: Install docker
+  yum:
+    name: "{{ item }}"
+    state: "present"
+  with_items: '{{ docker_yum_packages }}'
+  notify: Restart Docker Engine
+
+- name: "Add insecure_registry"
+  lineinfile:
+    dest: '{{ docker_config }}'
+    line: '{{docker_insecure_registry_key}}="--insecure-registry {{docker_insecure_registry}}"'
+    insertafter: '^#{{docker_insecure_registry_key}}'
+    backup: true
+  when: docker_insecure_registry is defined
+  notify: Restart Docker Engine
