Docker config can be tuned from playbook

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,3 +27,9 @@ docker_service_state: started
 
 docker_create_group: true
 docker_group_members: []
+
+docker_config_files: []
+#docker_config_files          # disable bridge networking
+#  - name: /etc/sysconfig/docker-network
+#    content: |
+#        DOCKER_NETWORK_OPTIONS="--bridge=none"
