--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,9 +10,9 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - xenial
-#    - name: CentOS
-#      versions:
-#        - 7
+    - name: CentOS
+      versions:
+        - 7
   galaxy_tags:
     - system
     - docker
