--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,3 +2,6 @@
   service:
     name: '{{ docker_service_name }}'
     state: restarted
+
+- name: systemctl daemon-reload
+  shell: systemctl daemon-reload
