--- a/tasks/yum-repository.yml
+++ b/tasks/yum-repository.yml
@@ -1,10 +1,11 @@
 ---
-- name: Add yum repository
+- name: Add yum repositories
   yum_repository:
-    name: dockerproject
-    description: Docker.io repositoru
-    state: present
-    enabled: true
-    baseurl: https://yum.dockerproject.org/repo/main/centos/7/
-    gpgcheck: true
-    gpgkey: https://yum.dockerproject.org/gpg
+    name: '{{ item.name }}'
+    description: '{{ item.description }}'
+    state: '{{ item.state|default("present")}}'
+    enabled: '{{ item.enabled|default(1) }}'
+    baseurl: '{{ item.baseurl }}'
+    gpgcheck: '{{ item.gpgcheck|default(1) }}'
+    gpgkey: '{{ item.gpgkey }}'
+  with_items: '{{ docker_yum_repos }}'
