--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,7 +10,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - xenial
-    - name: CentOS
+    - name: EL
       versions:
         - 7
   galaxy_tags:
