--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,7 +25,7 @@ docker_yum_repos:
   - name: docker-ce-stable
     description: Docker CE Stable - $basearch
     baseurl: https://download.docker.com/linux/centos/7/$basearch/stable
-    #enabled: 1
+    enabled: 1
     gpgcheck: 1
     gpgkey: https://download.docker.com/linux/centos/gpg
 
