--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -11,9 +11,8 @@
 
 - name: Install docker
   apt:
-    name: "{{ item }}"
+    name: "{{ docker_deb_packages }}"
     state: "present"
-  with_items: '{{ docker_deb_packages }}'
   notify: Restart Docker Engine
 
 - name: "Add insecure_registry"
