--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -12,9 +12,8 @@
 
 - name: Install docker
   yum:
-    name: "{{ item }}"
+    name: "{{ docker_yum_packages }}"
     state: "present"
-  with_items: '{{ docker_yum_packages }}'
   notify: Restart Docker Engine
 
 - name: "Add insecure_registry"
