Drop Debian 10 from supported list. Fix it later

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,9 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - xenial
+    - name: Debian
+      versions:
+        - 9
     - name: EL
       versions:
         - 7
