Upgraded to new Docker setup instructions

--- a/tasks/apt-repository.yml
+++ b/tasks/apt-repository.yml
@@ -2,7 +2,7 @@
 - name: Add apt repository
   apt_key:
     id: "{{ item.key_id }}"
-    keyserver: "{{ item.keyserver }}"
+    url: "{{ item.key_url }}"
     state: "{{ item.state|default('present') }}"
   with_items: '{{ docker_apt_repository }}'
   when: docker_add_repository and ansible_os_family == 'Debian'
