--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,9 +4,9 @@
 docker_add_repository: true
 
 docker_apt_repository:
-  - key_id: "58118E89F3A912897C070ADBF76221572C52609D"
-    keyserver: hkp://pgp.mit.edu:80
-    repository_url: "deb https://apt.dockerproject.org/repo ubuntu-xenial main"
+  - key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
+    key_url: 'https://download.docker.com/linux/debian/gpg'
+    repository_url: "deb [arch=amd64]  https://download.docker.com/linux/debian {{ ansible_lsb.codename }} stable"
 
 docker_ignore_start_errors: false
 
