--- a/vars/Debian-10.yml
+++ b/vars/Debian-10.yml
@@ -1,3 +1,8 @@
 ---
 docker_config: /etc/default/docker
 docker_insecure_registry_key: DOCKER_OPTS
+
+docker_apt_repository:
+  - key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
+    key_url: 'https://download.docker.com/linux/debian/gpg'
+    repository_url: "deb [arch=amd64]  https://download.docker.com/linux/debian {{ ansible_lsb.codename }} stable"
