--- a/vars/Ubuntu-16.04.yml
+++ b/vars/Ubuntu-16.04.yml
@@ -5,5 +5,5 @@ docker_insecure_registry_key: DOCKER_OPTS
 
 docker_apt_repository:
   - key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
-    key_url: 'curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -'
+    key_url: 'https://download.docker.com/linux/ubuntu/gpg'
     repository_url: "deb [arch=amd64]  https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable"
