--- a/vars/Ubuntu-20.04.yml
+++ b/vars/Ubuntu-20.04.yml
@@ -6,3 +6,7 @@ docker_apt_repository:
   - key_id: "9DC858229FC7DD38854AE2D88D81803C0EBFCD88"
     key_url: 'https://download.docker.com/linux/ubuntu/gpg'
     repository_url: "deb [arch=amd64]  https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable"
+
+docker_deb_packages:
+  - docker.io
+  - python3-docker
