--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,7 +40,7 @@ docker_compose_os: '{{ ansible_system }}'
 docker_compose_arch: '{{ ansible_architecture|default("x86_84") }}'
 _docker_compose_base_url: https://github.com/docker/compose/releases/download/
 docker_compose_url:
-  '{{ _docker_compose_base_url }}/1.23.1/docker-compose-{{ docker_compose_os }}-{{ docker_compose_arch }}'
+  '{{ _docker_compose_base_url }}/{{ docker_compose_version }}/docker-compose-{{ docker_compose_os }}-{{ docker_compose_arch }}'
 
 # docker_config_files          # disable bridge networking
 #  - name: /etc/sysconfig/docker-network
