--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -6,7 +6,7 @@
       - 'ansible_version.major >= 2'
 
 - name: Set-up apt-repository (when needed)
-  include: apt-repository.yml
+  include_tasks: apt-repository.yml
   when: docker_add_repository
 
 - name: Install docker
